Modern school site v2

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="logo">Modern School</div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#home">Dip</a></li>
+                <li><a href="#about">Sweety</a></li>
                 <li><a href="#courses">Courses</a></li>
                 <li><a href="#admissions">Admissions</a></li>
                 <li><a href="#gallery">Gallery</a></li>
