--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- Navbar -->
 <header class="navbar">
-  <div class="brand">Modern<span>School</span></div>
+  <div class="brand">Melbourne<span>University</span></div>
   <nav>
     <a href="#home">Kirtan</a>
     <a href="#about">Dip</a>
