--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <header class="navbar">
   <div class="brand">Melbourne<span>University</span></div>
   <nav>
-    <a href="#home">Kirtan</a>
-    <a href="#about">Dip</a>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
     <a href="#courses">Courses</a>
     <a href="#contact">Contact</a>
   </nav>
