--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="navbar">
   <div class="brand">Melbourne<span>University</span></div>
   <nav>
-    <a href="#home">Home</a>
+    <a href="#home">dip</a>
     <a href="#about">About</a>
     <a href="#courses">Courses</a>
     <a href="#contact">Contact</a>
